# LED-BOX

./: .gitignore  CLAUDE.md  Cargo.toml  README-2.md  Readme-2.md  Readme.md  TODO.md  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.junie/: guidelines.md
debug-app/: settings.gradle.kts
debug-app/app/: build.gradle.kts
debug-app/app/src/main/: AndroidManifest.xml
debug-app/app/src/main/java/com/example/ledboxdebug/: AudioVisualizerManager.kt  LedBoxScreen.kt  LedBoxService.kt  LedBoxViewModel.kt  MainActivity.kt
docs/: index.html  manifest.json
examples/: duplication-demo.rs  nvs-2.rs
src/: assets.rs  data.rs  data_2.rs  handlers.rs  main.rs  mode.rs  utils.rs
src/data/: nvs-2.rs  nvs.rs
src/handlers/: default.rs  monitor.rs  notification.rs  pet.rs  pomodoro.rs  tools.rs
src/utils/: animation.rs  bluetooth-2.rs  bluetooth.rs  button.rs  led-2.rs  led.rs  rng.rs
tools/: ble-notify.py  claude-hooks-example.json
