[package]
name = "led-box"
version = "0.1.0"
authors = ["naoya.noguchi"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led-box"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-hal = { version = "0.45", default-features = false }
embedded-hal = "1.0.0"
esp32-nimble = "0.11"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }